[package]
name = "slpk_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
env_logger = "0.10.0"
flate2 = "1.0.28"
lazy_static = "1.4.0"
log = "0.4.20"
regex = "1.10.2"
sailfish = "0.8.3"
serde_json = "1.0.107"
tiny_http = "0.12.0"
zip = "0.6.6"
